fixed z-index
fixed z-index

--- a/src/Components/3dModels/index.css
+++ b/src/Components/3dModels/index.css
@@ -18,6 +18,7 @@
 @media screen and (max-width: 1200px) {
   .contact-container {
     width: 45%;
+     z-index: 100;
 
   }
 
